public/css/style.css
body,
html {
    font-family: Arial, sans-serif;
    height: 100%;
    overflow: hidden;
}


#chat-container {
    /* width: 800px;
    height: 600px; */
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    user-select: none;

}


#messages {
    list-style-type: none;
    height: calc(100% );
    border: 2px solid black;
    border-radius: 20px;
    width: 100%; /*calc(100% - 20px);*/
    margin: 10px;
    margin-bottom: 100px;
    padding: 10px;
    overflow-y: auto;
    overflow-x: hidden;
    user-select: none;
    box-sizing: border-box;

}

#messages {
    scrollbar-width: none;
} 
 
#messages::-webkit-scrollbar {
    display: none; 
}



.message-container {
    width: 100%;
    min-height: fit-content;
    display: flex;
    flex-direction: row;
    align-items: center;
    box-sizing: border-box;
    margin-top: 10px;
    user-select: none;

}
 
.message-container:first-child {
    margin-top:0;
}

/* Received messages on the left */
.message-container.left {
    justify-content: flex-start; /* Ensure left items are left-aligned */
}

/* Sent messages on the right */
.message-container.right {
    justify-content: flex-end;   /* Right-align items */
}

.message {
    width: fit-content;
    height: fit-content;
    padding: 10px;
    margin: 0;
    margin-right: 0;
    border-radius: 15px;
    border: none;
    transition: background-color 5s ease, margin-right 5s ease;
    overflow-wrap: break-word;
    max-width: 50%;
    box-sizing: border-box;
    user-select: none;
    /* cursor: grab; */
}

.pending-message {
    justify-self: flex-end;
    background-color: lightgray;
    /* margin-right: 10px; */
}



.sent-message {
    justify-self: flex-end;
    background-color: lightseagreen;
    margin-right: 0;
}

.received-message {
    justify-self: flex-start;
    background-color: lightblue; 
}

.new-message {
    opacity: 0;
    overflow: hidden;
    transition: opacity 0.5s ease;
  }

.new-message.expanded {
    opacity: 1;
}

h1 {
    user-select: none;
}




#send-container {
    position: sticky;
    bottom: 10px;
    margin: 0;
    width: 100%;
    user-select: none;
    padding-left: 10px;
    padding-right: 10px;
    display: flex;

}

#chat-form {
    width: 100%;
    max-width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    user-select: none;

}



#message-input {
    padding: 10px;
    flex-grow: 1;
    size: 80%;
    height: 55px;
    box-sizing: border-box;
    border-radius: 20px;
    font-size: 1.4em;
    border: 2px solid rgb(10, 30, 29);

}
#message-input:focus {
    outline: none; /* Remove the default outline */
    border: 2px solid lightseagreen;
}

#send-button {
    width: 20%;
    height: 55px;
    margin: 0;
    margin-left: 5px;
    box-sizing: border-box;
    padding: 10px;
    background: lightseagreen;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 20px;
    user-select: none;

}

